docs/style.css
/* This is where custom CSS will go */
html {
    height: 100%;
    width: 100%;
  }
  
body{
    min-height: 100vh;
}

#pagewidth {
  min-height: 100vh;
  overflow: hidden;
}

#footer-section {
    width: 100%;
  }

.footercontent {
    width: 100%;
}

.navbar{
    transition-duration: .5s;
    }
  
.scroll-top .navbar{  
    transition-duration: .5s;
  }
  
.nav-item{
    /* invisible border so nav links don't jostle when border appears */
    box-sizing:border-box;
    border: 2px solid;
    border-radius: 25%;
  }

.card{
    height: 100%;
    min-width: 84px;
  }

.gofundmobile{
    max-height: 100px;
}

.link-card:link {
  /* Removes underline from the link text in the link card */
  text-decoration: none;
}

#testiomonialsTab{
  background-color: #333;
  color: whitesmoke;
}

.carousel-inner{
  height: 200px;
}

.carousel-item{
  height: 100%;
}

.carousel-caption p{
  margin-bottom: 0px;
  overflow-y: auto;
  max-height: 165px;
}

.carousel-indicators {
  bottom: -20px;
}

@media (hover: hover){
    .nav-item:hover{
    /* border appears on nav links on hover to make it extra obvious they're clickable */
      border: 2px solid whitesmoke;
      border-radius: 25%;
    }
  
    /* No hover effects so they don't get stuck on tap w/touchscreen */
    .link-card:hover{
      background-color: rgba(46, 46, 46, 1);
      color: whitesmoke;
    }
  
    /* Colored in home icon on hover */
    .navbar-brand:hover .bi-suit-heart:before {
      content: "\F59D";
    }

  }

